--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ langchain-community==0.2.11
 sentencepiece==0.1.99
 PyPDF2==3.0.1
 faiss-cpu==1.8.0
+scikit-learn==1.5.0
+pandas==2.2.2
+numpy==1.26.4
