--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-streamlit==1.36.0
-transformers==4.41.2
-torch==2.3.0
-langchain==0.2.11
-langchain-community==0.2.11
+streamlit
+pandas
+numpy
+scikit-learn
+langchain
+langchain-community
+transformers==4.37.2
+torch
 sentencepiece==0.1.99
-PyPDF2==3.0.1
-faiss-cpu==1.8.0
-scikit-learn==1.5.0
-pandas==2.2.2
-numpy==1.26.4
+faiss-cpu
+PyPDF2
