--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 streamlit
-pandas
-numpy
-scikit-learn
-langchain
-langchain-community
-transformers==4.37.2
-torch
-sentencepiece==0.1.99
+pymupdf
+sentence-transformers
 faiss-cpu
-PyPDF2
+langchain
+pypdf
+transformers
+accelerate
+bitsandbytes
+sentencepiece
+langchain-community
+scikit-learn
+joblib
+pandas
+torch
